# weather-web-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
src/: main.rs
src/models/: mod.rs  weather_models.rs
src/routes/: mod.rs  weather_routes.rs
src/services/: mod.rs  weather_service.rs
static/schema/: 001-init.sql
tests/: package.json  pnpm-lock.yaml
tests/src/: weather.test.ts
