[package]
name = "weather-web-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "macros",
    "any",
    "postgres",
] }
dotenv = "0.15.0"
axum = "0.7.2"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.5"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
serde_json = "*"
anyhow = "1.0.75"
env_logger = "*"
redis = "*"
